--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.2.0",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
-    "framer-motion": "^12.23.3",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
-    "react-toastify": "^11.0.5"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -38,7 +42,7 @@
     "json-server": "^1.0.0-beta.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.0.0",
-    "vite": "^7.0.4",
+    "vite": "^7.0.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
