--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.2.0",
+    "@supabase/supabase-js": "^2.52.0",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^10.18.0",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
